# FlatLand

./: .gitignore  LOGIC_SYSTEM.md  README.md  __init__.py  demo.py  mcp_server.py  pyproject.toml  readme.md  setup.py
examples/: generate_custom_env.py  generate_environment.py  run_llm_env.py  run_sokoban.py  simple_maze.py  snake.json  sokoban.json
flatland-demo/: app.py  simple_app.py
flatland-demo/app/static/css/: style.css
flatland-demo/app/static/js/: app.js
flatland-demo/app/templates/: index.html
flatland-web/: Dockerfile.api  Dockerfile.web  README.md  requirements.txt
flatland-web/api/: gpt_client.py  main.py
flatland-web/web/: package.json
flatland-web/web/public/: index.html
flatland-web/web/src/: App.css  App.jsx
flatland_web_ui/: app.py
flatland_web_ui/static/css/: style.css
flatland_web_ui/static/js/: app.js
flatland_web_ui/templates/: index.html
mesa_generator_app/: README.md  app.py  mesa_runner.py  openai_interface.py  requirements.txt
mesa_generator_app/static/: script.js  style.css
mesa_generator_app/templates/: index.html
prompt_to_game_engine/: PROJECT_PLAN.md  game_elements.py  game_engine.py  game_mcp_server.py  game_state.py  prompt_translator.py  sgd_schema_v0.1.json
proposal/: Dockerfile.api  Dockerfile.web  README.md  backend_implementation.py  docker-compose.yml  frontend_implementation.jsx  implementation_plan.md  llm_client_update.py  requirements.txt
src/flatland/: __init__.py  built_in_functions.py  config.py  constraints.py  generator.py  grid.py  logic_engine.py  models.py  prompt_template.txt  schemas.py  state_manager.py  templates.py  validator.py  world.py
src/flatland/llm/: __init__.py  client.py  exceptions.py
tests/: test_basic.py  test_integration.py  test_llm_integration.py  test_logic_engine.py
